--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # Dependencies
-/node_modules/.cache
+/node_modules/.cache/babel-loader
+/node_modules/.cache/.eslintcache
 
 # misc
 .DS_Store
