--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 # https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # Dependencies
-/node_modules/.cache/babel-loader
-/node_modules/.cache/.eslintcache
+/node_modules/.cache
 
 # misc
 .DS_Store
