--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-# https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# https://help.github.com/articles/ignoring-files/ for more information about ignoring files.
 
 # Dependencies
 /node_modules/.cache
 
-# misc
+# Misc
 .DS_Store
 .env.local
 .env.development.local
